# aegis-ledger-sdk

./: .gitignore  .monolith-allowlist  CHANGELOG.md  README.md  __init__.py  cli.py  client.py  conftest.py  crypto.py  langchain.py  pyproject.toml  setup.py  transport.py  types.py
.github/: CODEOWNERS
.github/workflows/: author-guard.yml  pr-gate.yml  publish.yml  tests.yml
aegis/: __init__.py  __main__.py  alerting.py  anthropic_sdk.py  auto.py  autogen.py  candid_builder.py  canister_ops.py  cli.py  cli_export.py  cli_init.py  cli_keys.py  cli_ops.py  cli_selfservice.py  client.py  config.py  crewai.py  crypto.py  doctor.py  entry_builder.py  errors.py  example_decorator.py  example_langchain_agent.py  integrity.py  langchain.py  mcp_proxy.py  mcp_queue.py  mcp_server.py  migrate.py  monitor.py  openai_agents.py  otel_exporter.py  pii.py  report.py  report_builders.py  schemes.py  setup.py  timestamp.py  trace.py  transport.py  (+2 more)
aegis/ultimum/: __init__.py  client_ext.py  types.py
scripts/: check_monoliths.py  release_gate.py
tests/: conftest.py  test_anthropic_sdk.py  test_autogen.py  test_chain.py  test_cli.py  test_cli_doctor.py  test_cli_pq.py  test_client_smoke.py  test_client_trace.py  test_client_validation.py  test_config.py  test_crewai.py  test_crypto.py  test_e2e_frameworks.py  test_e2e_gdpr.py  test_e2e_live.py  test_e2e_modules.py  test_e2e_v030_features.py  test_e2e_workflows.py  test_enduser_blindspots.py  test_errors.py  test_integrity.py  test_langchain.py  test_live_frameworks.py  test_mcp_server.py  test_migrate.py  test_mldsa87.py  test_openai_agents.py  test_pii.py  test_report.py  test_signature_scheme.py  test_timestamp.py  test_transport.py  test_types.py  test_verify.py
