[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-ledger-sdk"
version = "0.2.2"
description = "Tamper-evident execution ledger for AI agents. Log every tool call, decision, and error to a cryptographically verifiable audit trail."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Aegis Ledger", email = "info@aegis-ledger.com" }]
keywords = [
    "ai-agents",
    "anthropic",
    "audit-trail",
    "autogen",
    "compliance",
    "crewai",
    "langchain",
    "observability",
    "openai",
    "tamper-evident",
    "icp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: Security",
]

dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
icp = ["ic-py>=1.0"]
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.28"]
openai-agents = ["openai-agents>=0.1"]
autogen = ["autogen-agentchat>=0.4"]
anthropic-agents = ["claude-agent-sdk>=0.1"]
pdf = ["fpdf2>=2.7.4"]
pq = ["pqcrypto>=0.4"]
mcp = ["mcp>=1.20,<2.0"]
all = ["ic-py>=1.0", "langchain-core>=0.1", "crewai>=0.28", "openai-agents>=0.1", "autogen-agentchat>=0.4", "claude-agent-sdk>=0.1", "cryptography>=42.0", "fpdf2>=2.7.4", "pqcrypto>=0.4", "mcp>=1.20,<2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
aegis = "aegis.cli:main"
aegis-mcp = "aegis.mcp_server:main"

[project.urls]
Homepage = "https://www.aegis-ledger.com"
Documentation = "https://www.aegis-ledger.com/docs"
Repository = "https://github.com/VladislavRoss/aegis-ledger-sdk"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["N999"]
"tests/__init__.py" = ["N999"]
"tests/test_*.py" = ["N806"]

[tool.hatch.build]
exclude = [
  "tests/",
  "*.md",
  "*.txt",
  "*.pptx",
  ".gitignore",
  "example_*.py",
  "setup.py",
  "pyproject.toml",
  "mnt/",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
sources = {"." = "aegis"}

[tool.pytest.ini_options]
markers = [
    "network: requires network access (deselect with '-m not network')",
]
addopts = "-m 'not network'"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
